# rustds

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md
crates/bronotdsaurs/: Cargo.toml  README.md
crates/bronotdsaurs/benches/: nbc_row_walk.rs  row_walk.rs  token_decoder.rs  utf16_decode.rs
crates/bronotdsaurs/src/interface/: session.rs
crates/bronotdsaurs/src/smp/: errors.rs  mod.rs  prelude.rs  types.rs
crates/bronotdsaurs/src/tds/: mod.rs  prelude.rs
crates/bronotdsaurs/src/tds/decoder/: error.rs  prelogin.rs  rows.rs  token.rs
crates/bronotdsaurs/src/tds/encoder/: bulk_load.rs  header.rs  mod.rs  prelogin.rs  rpc.rs  sql_batch.rs
crates/bronotdsaurs/src/tds/fmt/: decimal.rs  mod.rs  prelude.rs
crates/bronotdsaurs/src/tds/session/: adaptor.rs  error.rs  login.rs  mod.rs  prelogin.rs  prelude.rs  sql_batch.rs  state.rs  timer.rs  traits.rs
crates/bronotdsaurs/src/tds/types/: definitions.rs  login.rs  message.rs  mod.rs  prelogin.rs  prelude.rs  regex.txt  rpc.rs  utils.rs
crates/bronotdsaurs/src/tds/types/sp/: cc_opts.rs  scroll_opts.rs  sp.sh  sp_cursorclose.rs  sp_cursorexecute.rs  sp_cursorfetch.rs  sp_cursoroption.rs  sp_execute.rs  sp_prepare.rs
crates/bronotdsaurs/src/tds/types/tokens/: alt_metadata.rs  col_info.rs  col_metadata.rs  data_classification.rs  done.rs  env_change.rs  error_info.rs  login_ack.rs  mod.rs  order.rs  return_status.rs  return_value.rs  session_status.rs  token_stream.rs  types.rs
crates/bronotdsaurs/terraform/: .gitignore  azure_sql.tf  example.sh  setup.sh
crates/derive_proc_macros/: Cargo.toml
crates/derive_proc_macros/src/: lib.rs
crates/fedauth/: Cargo.toml
crates/fedauth/examples/go-msal/: .envrc  build.sh  go.mod  go.sum  main.go
crates/fedauth/src/: fed_auth.rs  lib.rs
crates/interface/: Cargo.toml
crates/interface/src/: lib.rs
crates/rustds/: Cargo.toml  README.md  podman.sh
crates/rustds/src/: lib.rs
crates/rustds/src/interface/: session.rs
crates/rustds/src/smp/: stream.rs  traits.rs
crates/rustds/src/tds/: prelude.rs
crates/rustds/src/tds/decoder/: mod.rs  stream.rs
crates/rustds/src/tds/encoder/: bulk_load.rs  definitions.rs  error.rs  login.rs  macros.rs  message.rs  mod.rs  prelogin.rs  traits.rs
crates/rustds/src/tds/fmt/: datetime.rs  guid.rs  money.rs
crates/rustds/src/tds/plugins/: fed_auth.rs  mod.rs
crates/rustds/src/tds/session/: adaptor.rs  login.rs  observer.rs  prelogin.rs  sql_batch.rs
crates/rustds/src/tds/types/: bulk_load.rs  definitions.rs  header.rs  macros.rs  message.rs  mod.rs  sql_batch.rs  traits.rs
crates/rustds/src/tds/types/sp/: mod.rs  prelude.rs  sp_cursor.rs  sp_cursoropen.rs  sp_cursorprepare.rs  sp_cursorprepexec.rs  sp_cursorunprepare.rs  sp_execute.rs  sp_executesql.rs  sp_prepare.rs  sp_prepexec.rs  sp_prepexecrpc.rs  sp_unprepare.rs
crates/rustds/src/tds/types/tokens/: alt_rowspan.rs  col_info.rs  col_metadata.rs  env_change.rs  fed_auth_info.rs  nbc_row.rs  row.rs  sspi.rs  tab_name.rs  tvp.rs
crates/rustds/terraform/: .gitignore  azure_sql.tf
foundation/collections/: Cargo.toml
foundation/collections/src/: lib.rs
foundation/plugins/: Cargo.toml  README.md
foundation/plugins/src/: handle.rs  isolation.rs  lib.rs
foundation/traits/: Cargo.toml
foundation/traits/src/: lib.rs
foundation/transport/: Cargo.toml
foundation/transport/src/: lib.rs  prelude.rs  providers.rs  rustls.rs  tls.rs
