[workspace]
members = [
    "crates/bronotdsaurs",
    "crates/derive_proc_macros",
    "crates/fedauth",
    "crates/interface",
    "foundation/collections",
    "foundation/transport",
    "foundation/traits",
    "foundation/plugins",
]
resolver = "3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(kani)"] }

[workspace.lints.clippy]
let_underscore_must_use = "warn"
ok_expect = "warn"
unwrap_or_default = "warn"
